--- a/index.html
+++ b/index.html
@@ -1,113 +1,149 @@
 <!DOCTYPE html>
 <html lang="fi">
-<title>Elisan blogi</title>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-<link rel="preconnect" href="https://fonts.gstatic.com" />
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet" />
-<link rel="stylesheet" href="style.css" />
-<link rel="shortcut icon" href="" type="image/x-icon" />
-<meta name="description" content="" />
-<meta name="keywords" content="" />
-<meta name="author" content="Elisa Stenberg" />
+
+<head>
+  <title>Elisan blogi</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+  <meta name="author" content="Elisa Stenberg" />
+</head>
 
 <body class="w3-light-grey">
-    <!-- w3-content defines a container for fixed size centered content, 
-and is wrapped around the whole page content, except for the footer in this example -->
-    <div class="w3-content">
-        <!-- Header -->
-        <header class="w3-container w3-center w3-padding-32">
-            <h1><b>Elisan Antologia</b></h1>
-            <p>Tervetuloa <span class="w3-tag">Elisan Stenbergin</span> blogiin</p>
-        </header>
-        <!-- Grid -->
-        <main class="w3-row">
-            <!-- Blog entries -->
-            <section class="w3-col l8 s12">
-                <!-- Blog entry -->
-                <script id="template" type="text/x-handlebars-template">
-                    <article class="w3-card-4 w3-margin w3-white">
-                    <img src="" alt="Book's cover" />
-                    <div class="w3-container">
-                        <h2><b>Otsikko</b></h2>
-                        <h3>Kirjan kuvaus, <span class="w3-opacity">päivämäärä</span></h3>
-                    </div>
-                    <div class="w3-container">
-                        <p>Book's intro....</p>
-                        <div class="w3-row">
-                            <div class="w3-col m8 s12">
-                                <p>
-                                    <button class="w3-button w3-padding-large w3-white w3-border">
-                                        <b>Lue lisää...</b>
-                                    </button>
-                                </p>
-                            </div>
-                            <div class="a2a_kit a2a_kit_size_32 a2a_default_style w3-col m4 w3-padding-16 w3-small"
-                                data-a2a-title="Elisa blogi"
-                                data-a2a-url="https://panagiotis.netlify.app">>
-                                <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-                                <a class="a2a_button_facebook"></a>
-                                <a class="a2a_button_facebook_messenger"></a>
-                                <a class="a2a_button_whatsapp"></a>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-                
-                </script>
-                <hr />
-                <!-- END BLOG ENTRIES -->
-            </section>
-            <!-- Introduction menu -->
-            <section class="w3-col l4">
-                <!-- About Card -->
-                <div class="w3-card w3-margin w3-margin-top">
-                    <img src="" alt="Elisa Stenberg, profile photo" />
-                    <div class="w3-container w3-white">
-                        <h4><b>Elisa Stenberg</b></h4>
-                        <p>
-                            Just me, myself and I, exploring the universe of uknownment. I
-                            have a heart of love and a interest of bla,bla blog. I want to
-                            share my world with you.
-                        </p>
-                    </div>
+  <div class="w3-content">
+    <header class="w3-container w3-center w3-padding-32 w3-text-white">
+      <h1><strong>Elisan Antologia</strong></h1>
+      <p>Tervetuloa <span class="w3-tag">Elisan Stenbergin</span> blogiin</p>
+    </header>
+    <!-- Grid -->
+    <main class="w3-row">
+      <!-- Blog entries -->
+      <section class="w3-col l8 s12">
+        <!-- Blog entry -->
+        <script id="template" type="text/x-handlebars-template">
+            {{#each content  }}
+              <article class="w3-card-4 w3-margin w3-white">
+                <img src="assets/{{imgSrc}}" alt="Book's cover" loading="lazy" width="100%" height="500px" />
+                <div class="w3-container">
+                  <h2>
+                    <strong>
+                      {{title}}
+                    </strong>
+                  </h2>
+                  <h3>
+                    {{description}},
+                    <span class="w3-opacity">
+                      {{date}}
+                    </span>
+                  </h3>
                 </div>
-                <hr />
-                <!-- Posts -->
-                <div class="w3-card w3-margin">
-                    <div class="w3-container w3-padding">
-                        <h4>Viimeisimmät artikkelit</h4>
+                <div class="w3-container">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore inventore recusandae, unde quas consequatur magni dolore dolor a! Quidem, provident! Error odit ullam eligendi? Ipsam sit quibusdam officiis non reiciendis.
+                  </p>
+                  <div class="w3-row">
+                    <div class="w3-col m8 s12">
+                      <a
+                        href="{{link}}"
+                        class="w3-button w3-padding-large w3-white w3-border"
+                      >
+                        <strong>
+                          Lue lisää...
+                        </strong>
+                      </a>
                     </div>
-                    <ul class="w3-ul w3-hoverable w3-white">
-                        <script id="template2" type="text/x-handlebars-template">
-                        <li class="w3-padding-16">
-                            <img src="" alt="Image" class="w3-left w3-margin-right" />
-                            <span class="w3-large">Otsikko</span><br />
-                        </li></script>
-                    </ul>
+                    <div
+                      class="a2a_kit a2a_kit_size_32 a2a_default_style w3-col m4 w3-padding-16 w3-small"
+                      data-a2a-title="Elisa blogi"
+                      data-a2a-url="https://panagiotis.netlify.app"
+                    >
+                      
+                      <a
+                        class="a2a_dd"
+                        href="https://www.addtoany.com/share"
+                      ></a>
+                      <a class="a2a_button_facebook"></a>
+                      <a class="a2a_button_facebook_messenger"></a>
+                      <a class="a2a_button_whatsapp"></a>
+                    </div>
+                  </div>
                 </div>
-
-                <hr />
-                <!-- END Introduction Menu -->
-            </section>
-            <!-- END GRID -->
-        </main>
-        <br />
-        <!-- END w3-content -->
-    </div>
-    <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-        <div class="a2a_kit a2a_kit_size_32 a2a_default_style " data-a2a-title="Elisa blogi">
-            <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-            <a class="a2a_button_facebook"></a>
-            <a class="a2a_button_facebook_messenger"></a>
-            <a class="a2a_button_whatsapp"></a>
+              </article>
+            {{/each}}
+          </script>
+        <hr />
+        <!-- END BLOG ENTRIES -->
+      </section>
+      <!-- Introduction menu -->
+      <section class="w3-col l4">
+        <!-- About Card -->
+        <div class="w3-card w3-margin w3-margin-top">
+          <img class="w3-circle w3-margin-bottom" id="profilePhoto" src="assets/background/oleksandra-bardash-6rRLtMcEnzg-unsplash.webp" alt="Elisa Stenberg, profile photo" width="100%" height="250px"
+            oncontextmenu="false" loading="lazy" />
+          <div class="w3-container w3-white">
+            <h4><strong>Elisa Stenberg</strong></h4>
+            <p>
+              Just me, myself and I, exploring the universe of uknownment. I
+              have a heart of love and a interest of bla,bla blog. I want to
+              share my world with you.
+            </p>
+          </div>
         </div>
+        <hr />
+        <!-- Posts -->
+        <div class="w3-card w3-margin">
+          <div class="w3-container w3-padding w3-white">
+            <h4>Viimeisimmät artikkelit</h4>
+          </div>
+          <ul class="w3-ul w3-hoverable w3-white">
+            <script id="template2" type="text/x-handlebars-template">
+              {{#each content}}
+                <li class="w3-padding-16">
+                  <img
+                    src="assets/{{imgSrc}}"
+                    alt="Image"
+                    class="w3-left w3-margin-right w3-image"
+                    loading="lazy"
+                    width="100%"
+                    height="250px"
+                  />
+                  <aside class="w3-large">
+                    {{title}}
+                  </aside>
+                  <br />
+                </li>
+                {{/each}}
+              </script>
+          </ul>
+        </div>
+
+        <hr />
+        <!-- END Introduction Menu -->
+      </section>
+      <!-- END GRID -->
+    </main>
+    <br />
+    <!-- END w3-content -->
+    <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+      <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Elisa blogi">
+        <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+        <a class="a2a_button_facebook"></a>
+        <a class="a2a_button_facebook_messenger"></a>
+        <a class="a2a_button_whatsapp"></a>
+      </div>
     </footer>
-    <script async src="https://static.addtoany.com/menu/page.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-    <script src="main.js" defer>
-    </script>
+  </div>
+
+  <script async defer src="https://static.addtoany.com/menu/page.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+  <script src="main.js" defer></script>
+  <script src="assets/articles.js"></script>
 </body>
 
 </html>
