--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="author" content="Elisa Stenberg" />
 </head>
 
-<body class="w3-light-grey">
+<body>
   <div class="w3-content">
     <header class="w3-container w3-center w3-padding-32 w3-text-white">
       <h1><strong>Elisan Antologia</strong></h1>
@@ -50,7 +50,7 @@
                   <div class="w3-row">
                     <div class="w3-col m8 s12">
                       <a
-                        href="{{link}}"
+                        href="articles.html?id={{id}}"
                         class="w3-button w3-padding-large w3-white w3-border"
                       >
                         <strong>
@@ -68,9 +68,9 @@
                         class="a2a_dd"
                         href="https://www.addtoany.com/share"
                       ></a>
-                      <a class="a2a_button_facebook"></a>
-                      <a class="a2a_button_facebook_messenger"></a>
-                      <a class="a2a_button_whatsapp"></a>
+                      <a class="a2a_button_facebook">Share in facebook</a>
+                      <a class="a2a_button_facebook_messenger">Share in facebook messenger</a>
+                      <a class="a2a_button_whatsapp">Share in what's up</a>
                     </div>
                   </div>
                 </div>
