page-details ready

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <div class="w3-row">
                     <div class="w3-col m8 s12">
                       <a
-                        href="articles.html?id={{id}}"
+                        href="articles.html?id={{@index}}"
                         class="w3-button w3-padding-large w3-white w3-border"
                       >
                         <strong>
