--- a/articles.html
+++ b/articles.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <meta name="description" content="" />
@@ -14,74 +16,50 @@
     <meta name="author" content="Elisa Stenberg" />
 
     <title>Elisan blogi</title>
-</head>
-
-<body id="article-details" class="w3-content">
+  </head>
+  <body id="article-details">
     <header class="w3-container w3-center w3-padding-32 w3-text-white">
-        <h1><strong>Elisan Antologia</strong></h1>
-        <p>Tervetuloa <span class="w3-tag">Elisan Stenbergin</span> blogiin</p>
+      <h1>
+        <a href="index.html"> <strong>Elisan Antologia</strong></a>
+      </h1>
+      <p>Tervetuloa <span class="w3-tag">Elisan Stenbergin</span> blogiin</p>
     </header>
     <main>
-        <script id="template" type="text/x-handlebars-template">
+      <script id="template" type="text/x-handlebars-template">
         <article class="w3-card-4 w3-margin w3-white">
           <img
             src="assets/{{imgSrc}}"
             alt="Book's cover"
             loading="lazy"
             width="100%"
-            height="500px"
+            height="300px"
           />
-          <div class="w3-container">
-            <h2>
-              <strong>
-                {{title}}
-              </strong>
-            </h2>
-          </div>
-          <div class="w3-container">
-            <p>
-              {{text}}
-            </p>
-            <div class="w3-row">
-              <div
-                class="a2a_kit a2a_kit_size_32 a2a_default_style w3-col m4 w3-padding-16 w3-small"
-                data-a2a-title="Elisa blogi"
-                data-a2a-url="https://panagiotis.netlify.app"
-              >
-                <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-                <a class="a2a_button_facebook">
-                  Share in facebook
-                </a>
-                <a class="a2a_button_facebook_messenger">
-                  Share in facebook messenger
-                </a>
-                <a class="a2a_button_whatsapp">
-                  Share in what's up
-                </a>
-              </div>
-            </div>
-          </div>
+
+          <h2 class="w3-container">
+            <strong>
+              {{title}}
+            </strong>
+          </h2>
+
+          <p class="w3-container">
+            {{text}}
+          </p>
         </article>
       </script>
     </main>
     <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-        <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Elisa blogi">
-            <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-            <a class="a2a_button_facebook"></a>
-            <a class="a2a_button_facebook_messenger"></a>
-            <a class="a2a_button_whatsapp"></a>
-        </div>
+      <div
+        class="a2a_kit a2a_kit_size_32 a2a_default_style"
+        data-a2a-title="Elisa blogi"
+      >
+        <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+        <a class="a2a_button_facebook"></a>
+        <a class="a2a_button_facebook_messenger"></a>
+        <a class="a2a_button_whatsapp"></a>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <script src="assets/articles.js"></script>
     <script src="main.js"></script>
-    <script>
-        if (document.getElementById('article-details')) {
-            const compiledHtml = templateBlog(content.content[articleID]);
-            const fill = document.getElementsByTagName("main")[0]; // add the filled template in destination
-            fill.innerHTML = compiledHtml;
-        }
-    </script>
-</body>
-
+  </body>
 </html>
