--- a/articles.html
+++ b/articles.html
@@ -16,6 +16,12 @@
     <meta name="author" content="Elisa Stenberg" />
 
     <title>Elisan blogi</title>
+    <style>
+      article p{
+        white-space: normal;
+      }
+
+    </style>
   </head>
   <body id="article-details">
     <header class="w3-container w3-center w3-padding-32 w3-text-white">
@@ -41,17 +47,15 @@
             </strong>
           </h2>
 
-          <p class="w3-container">
+          <p class="w3-container" >
             {{text}}
           </p>
         </article>
       </script>
     </main>
     <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-      <div
-        class="a2a_kit a2a_kit_size_32 a2a_default_style"
-        data-a2a-title="Elisa blogi"
-      >
+      <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Elisa blogi"
+        data-a2a-url="https://panagiotis.netlify.app">
         <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
         <a class="a2a_button_facebook"></a>
         <a class="a2a_button_facebook_messenger"></a>
