--- a/index.html
+++ b/index.html
@@ -27,84 +27,83 @@
       <section class="w3-col l8 s12">
         <!-- Blog entry -->
         <script id="template" type="text/x-handlebars-template">
-            {{#each content  }}
-              <article class="w3-card-4 w3-margin w3-sand">
-                <img src="assets/{{imgSrc}}" alt="Book's cover" loading="lazy" width="100%" height="500px" />
-                <div class="w3-container">
-                  <h2>
+            {{#each writings}}
+              {{#if @last}}
+                <article class="w3-card-4 w3-margin w3-sand w3-round">
+                  <h2 class="w3-padding w3-light-gray w3-round">
                     <strong>
-                      {{title}}
+                      Viimeinen artikkeli
                     </strong>
                   </h2>
-                  <h3>
-                    {{description}},
-                    <span class="w3-opacity">
-                      {{date}}
-                    </span>
-                  </h3>
-                </div>
-                <div class="w3-container">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore inventore recusandae, unde quas consequatur magni dolore dolor a! Quidem, provident! Error odit ullam eligendi? Ipsam sit quibusdam officiis non reiciendis.
-                  </p>
-                  <div class="w3-row">
-                    <div class="w3-col m8 s12">
-                      <a
-                        href="articles.html?id={{@index}}"
-                        class="w3-button w3-padding-large w3-white w3-border"
-                      >
-                        <strong>
-                          Lue lisää...
-                        </strong>
-                      </a>
-                    </div>
-                    <div
-                      class="a2a_kit a2a_kit_size_32 a2a_default_style w3-col m4 w3-padding-16 w3-small"
-                      data-a2a-title="Elisa blogi"
-                      data-a2a-url="https://panagiotis.netlify.app"
-                    >
-                      
-                      <a
-                        class="a2a_dd"
-                        href="https://www.addtoany.com/share"
-                      ></a>
-                      <a class="a2a_button_facebook">Share in facebook</a>
-                      <a class="a2a_button_facebook_messenger">Share in facebook messenger</a>
-                      <a class="a2a_button_whatsapp">Share in what's up</a>
+                  <img
+                    src="assets/{{imgSrc}}"
+                    alt="Book's cover"
+                    loading="lazy"
+                    width="100%"
+                    height="500px"
+                  />
+                  <div class="w3-container">
+                    <h3>
+                      {{title}},
+                      <span class="w3-opacity">
+                        {{date}}
+                      </span>
+                    </h3>
+                  </div>
+                  <div class="w3-container">
+                    <h4>
+                      {{description}}
+                    </h4>
+                    <div class="w3-row">
+                      <p>
+                        {{text}}
+                      </p>
+                      <div class="w3-col m8 s12">
+                        <a
+                          href="articles.html?id={{@index}}"
+                          class="w3-button w3-margin-bottom w3-padding-large w3-white w3-border"
+                        >
+                          <strong>
+                            Lue lisää...
+                          </strong>
+                        </a>
+                      </div>
                     </div>
                   </div>
-                </div>
-              </article>
+                </article>
+              {{/if}}
             {{/each}}
           </script>
         <hr />
         <!-- END BLOG ENTRIES -->
       </section>
       <!-- Introduction menu -->
-      <section class="w3-col l4 ">
+      <section class="w3-col l4">
         <!-- About Card -->
         <div class="w3-card w3-margin w3-margin-top w3-sand">
-          <img class="w3-circle w3-margin-bottom" id="profilePhoto"
+          <img class="w3-circle w3-margin" id="profilePhoto"
             src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/18056771_10155390098399101_3831294978654016809_n.jpg?_nc_cat=109&ccb=2&_nc_sid=09cbfe&_nc_ohc=W3iL4jlVUtAAX8Mvtzm&_nc_ht=scontent-arn2-1.xx&oh=54a12886ad6034ea5301cd8e005f9944&oe=601C3BB6"
             alt="Elisa Stenberg, profile photo" width="100%" height="250px" oncontextmenu="false" loading="lazy" />
           <div class="w3-container w3-sand">
             <h4><strong>Elisa Stenberg</strong></h4>
             <p>
-              Tervetuloa lukemaan tekstejäni! <br> Olen Elisa Stenberg ja olen opiskellut luovaa kirjoittamista
-              Jamilahden
-              kansanopistossa sekä
-              Kauniaisissa Työväen Akatemiassa. Olen kirjoittanut myös näytelmän <em>"Minä ja Hugo Simberg"</em> , jonka
-              on
-              esittänyt Haminan Hywät Wanhat asukkaat
-              keväällä 2013. Lisäsksi tekstejäni on ollut muutamassa lehdessä. Toivottavasti viihdyt tekstejeni parissa!
+              Tervetuloa lukemaan tekstejäni! <br />
+              Olen Elisa Stenberg ja olen opiskellut luovaa kirjoittamista
+              Jamilahden kansanopistossa sekä Kauniaisissa Työväen
+              Akatemiassa. Olen kirjoittanut myös näytelmän
+              <em>"Minä ja Hugo Simberg"</em> , jonka on esittänyt Haminan
+              Hywät Wanhat asukkaat keväällä 2013. Lisäsksi tekstejäni on
+              ollut muutamassa lehdessä. Toivottavasti viihdyt tekstejeni
+              parissa!
             </p>
             <p>
-              Welcome! <br> I'm Elisa Stenberg and I have studied creative writing in Jamilahti folk-high
-              school as well as in the Työväen Academy of Kauniainen. I have also written the play <em> "Me and Hugo
-                Simberg"</em>,
-              which was presented in Hamina Hywät Wanhat asukkaat in the spring of 2013. Furthemore my texts have been
-              in a
-              few magazines. I hope you enjoy my writings!
+              Welcome! <br />
+              I'm Elisa Stenberg and I have studied creative writing in
+              Jamilahti folk-high school as well as in the Työväen Academy of
+              Kauniainen. I have also written the play
+              <em> "Me and Hugo Simberg"</em>, which was presented in Hamina
+              Hywät Wanhat asukkaat in the spring of 2013. Furthemore my texts
+              have been in a few magazines. I hope you enjoy my writings!
             </p>
           </div>
         </div>
@@ -116,21 +115,20 @@
           </div>
           <ul class="w3-ul w3-hoverable">
             <script id="template2" type="text/x-handlebars-template">
-              {{#each content}}
-                <li class="w3-padding-16">
-                  <img
-                    src="assets/{{imgSrc}}"
-                    alt="Image"
-                    class="w3-left w3-margin-right w3-image"
-                    loading="lazy"
-                    width="100%"
-                    height="250px"
-                  />
-                  <h3 class="w3-large">
-                    {{title}}
-                  </h3>
-                  <br />
-                </li>
+                {{#each writings}}
+                  <li class="w3-padding-16">
+                    <img
+                      src="assets/{{imgSrc}}"
+                      alt="Image"
+                      class="w3-left w3-margin-right w3-image"
+                      loading="lazy"
+                      width="100%"
+                      height="250px"
+                    />
+                    <h3 class="w3-large">
+                      {{title}}
+                    </h3>
+                  </li>
                 {{/each}}
               </script>
           </ul>
@@ -144,7 +142,8 @@
     <br />
     <!-- END w3-content -->
     <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-      <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Elisa blogi">
+      <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Elisa blogi"
+        data-a2a-url="https://panagiotis.netlify.app">
         <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
         <a class="a2a_button_facebook"></a>
         <a class="a2a_button_facebook_messenger"></a>
