--- a/articles.html
+++ b/articles.html
@@ -30,7 +30,7 @@
   </header>
   <main>
     <script id="template" type="text/x-handlebars-template">
-        <article class="w3-card-4 w3-margin w3-white">
+        <article class="w3-card-4 w3-margin w3-sand">
           <img
             src="assets/{{imgSrc}}"
             alt="Book's cover"
