--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <article class="w3-card-4 w3-margin w3-sand w3-round">
                 <h2 class="w3-padding w3-light-gray w3-round">
                   <strong>
-                    Viimeinen kirjoitus
+                    Viimeisin merkintä
                   </strong>
                 </h2>
                 <img
