--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
                 />
                 <div class="w3-container">
                   <h3>
-                    {{title}}<!-- ,
-                    <span class="w3-opacity">
-                      {{date}}
-                    </span> -->
+                    {{title}}
                   </h3>
                 </div>
                 <div class="w3-container">
@@ -133,7 +130,7 @@
     </section>
   </main>
   <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-    <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Elisa blogi">
+    <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
       <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
       <a class="a2a_button_facebook"></a>
       <a class="a2a_button_facebook_messenger"></a>
