--- a/articles.html
+++ b/articles.html
@@ -49,7 +49,7 @@
       </script>
   </main>
   <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-    <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Elisa blogi" data-a2a-url=` ${shareUrl} `>
+    <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
       <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
       <a class="a2a_button_facebook"></a>
       <a class="a2a_button_facebook_messenger"></a>
