--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <meta name="description" content="Täältä voit lukea Elisan kirjoituksia" />
   <meta name="keywords" content="Elisa Stenberg, kirjoituksia, blogi" />
   <meta name="author" content="Elisa Stenberg" />
+
+  <meta property="og:image" content="photo" />
+  <!-- <meta property=”og:image:width” content=”180″ />
+  <meta property=”og:image:height” content=”110″ /> -->
 </head>
 
 <body class="w3-content">
