--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="keywords" content="Elisa Stenberg, kirjoituksia, blogi" />
   <meta name="author" content="Elisa Stenberg" />
 
-  <meta property="og:image" content="./assets/background/annie.webp" />
+  <meta property="og:image" content="assets/background/annie.webp" />
   <!-- <meta property=”og:image:width” content=”180″ />
   <meta property=”og:image:height” content=”110″ /> -->
 </head>
