--- a/articles.html
+++ b/articles.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
   <meta name="author" content="Elisa Stenberg" />
-  <meta property="og:image" content="photo" />
+  <meta property="og:image" content="assets/background/annie.webp" />
   <title>Elisan blogi</title>
   <style>
     article p {
