--- a/articles.html
+++ b/articles.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
   <meta name="author" content="Elisa Stenberg" />
+  <meta name="description" content="Täältä voit lukea minun viimeisen kirjoituksen">
   <meta property="og:image" content="assets/background/annie.webp" />
   <title>Elisan blogi</title>
   <style>
