--- a/articles.html
+++ b/articles.html
@@ -36,7 +36,7 @@
             width="100%"
             height="300px"
           />
-          <a class="a2a_dd w3-margin-left w3-text-blue" href="https://www.addtoany.com/share">Share</a>
+        <!-- <a class="a2a_dd w3-margin-left w3-text-blue" href="https://www.addtoany.com/share">Share</a> -->
           <h2 class="w3-container">
             <strong>
               {{title}}
@@ -49,14 +49,14 @@
         </article>
       </script>
   </main>
-  <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+ <!-- <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
     <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
       <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
       <a class="a2a_button_facebook"></a>
       <a class="a2a_button_facebook_messenger"></a>
       <a class="a2a_button_whatsapp"></a>
     </div>
-  </footer>
+  </footer> -->
   <script async defer src="https://static.addtoany.com/menu/page.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
   <script src="assets/articles.js"></script>
