--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
-  <meta name="description" content="Täältä voit lukea Elisan kirjoituksia" />
+  <meta name="description" property="og:description" content="Täältä voit lukea Elisan kirjoituksia" />
   <meta name="keywords" content="Elisa Stenberg, kirjoituksia, blogi" />
   <meta name="author" content="Elisa Stenberg" />
 
-  <meta property="og:image" content="assets/background/annie.webp" />
+  <meta name="image" property="og:image" content="assets/background/annie.webp" />
   </head>
 
 <body class="w3-content">
