--- a/articles.html
+++ b/articles.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
   <meta name="author" content="Elisa Stenberg" />
-  <meta name="description" content="Täältä voit lukea minun viimeisen kirjoituksen">
-  <meta property="og:image" content="assets/background/annie.webp" />
+  <meta name="description" property="og:description" content="" />
+  <meta name="image" property="og:image" content="" />
   <title>Elisan blogi</title>
   <style>
     article p {
@@ -49,14 +49,14 @@
         </article>
       </script>
   </main>
- <!-- <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+  <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
     <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
       <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
       <a class="a2a_button_facebook"></a>
       <a class="a2a_button_facebook_messenger"></a>
       <a class="a2a_button_whatsapp"></a>
     </div>
-  </footer> -->
+  </footer>
   <script async defer src="https://static.addtoany.com/menu/page.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
   <script src="assets/articles.js"></script>
