--- a/articles.html
+++ b/articles.html
@@ -7,9 +7,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
   <meta name="author" content="Elisa Stenberg" />
-  <meta name="description" property="og:description" content="" />
+  <meta name="description" property="og:description" content="Täältä voit lukea Elisan kirjoitukseni" />
   <meta name="image" property="og:image" content="" />
   <title>Elisan blogi</title>
   <style>
