--- a/articles.html
+++ b/articles.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
   <meta name="author" content="Elisa Stenberg" />
-  <meta name="description" property="og:description" content="" />
-  <meta name="image" property="og:image" content="" />
+  <meta name="description" property="og:description" content="Täältä voit lukea kirjoitukseni" />
+  <meta name="image" property="og:image" content="assets/background/annie.webp" />
   <title>Elisan blogi</title>
   <style>
     article p {
