--- a/articles.html
+++ b/articles.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,14 +37,18 @@
             width="100%"
             height="300px"
           />
-        <!-- <a class="a2a_dd w3-margin-left w3-text-blue" href="https://www.addtoany.com/share">Share</a> -->
+          <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+            <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+            <a class="a2a_button_facebook"></a>
+            <a class="a2a_button_facebook_messenger"></a>
+            <a class="a2a_button_copy_link"></a>
+          </div>
           <h2 class="w3-container">
             <strong>
               {{title}}
             </strong>
           </h2>
-
-          <p class="w3-container" >
+          <p class="w3-container">
             {{{text}}}
           </p>
         </article>
