--- a/articles.html
+++ b/articles.html
@@ -55,6 +55,7 @@
       </script>
   </main>
   <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+    <a href="index.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Previous</a>
     <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
       <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
       <a class="a2a_button_facebook"></a>
