--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta name="keywords" content="Elisa Stenberg, kirjoituksia, blogi" />
   <meta name="author" content="Elisa Stenberg" />
   <meta name="image" property="og:image" content="assets/background/annie.webp" />
+  <meta name="google-site-verification" content="wyhBlr3ay1NftvwDC1SFGTjWaY8NoGQ1UieA6m1yL-0" />
   </head>
 
 <body class="w3-content">
