--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <title>Elisan blogi</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+ 
+  <link rel="stylesheet preload" href="https://www.w3schools.com/w3css/4/w3.css" media="all" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet preload" href="css/style.css" media="all" />
+  
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
   <meta name="description" property="og:description" content="Täältä voit lukea Elisan kirjoituksia" />
   <meta name="keywords" content="Elisa Stenberg, kirjoituksia, blogi" />
@@ -74,7 +76,7 @@
       <!-- About Card -->
       <div class="w3-card w3-margin w3-margin-top w3-sand">
         <img class="w3-circle w3-margin" id="profilePhoto"
-          src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/18056771_10155390098399101_3831294978654016809_n.jpg?_nc_cat=109&ccb=2&_nc_sid=09cbfe&_nc_ohc=W3iL4jlVUtAAX8Mvtzm&_nc_ht=scontent-arn2-1.xx&oh=54a12886ad6034ea5301cd8e005f9944&oe=601C3BB6"
+          src="./assets/profile.webp"
           alt="Elisa Stenberg, profile photo" width="100%" height="250px" oncontextmenu="false" loading="lazy" />
         <div class="w3-container w3-sand">
           <h4><strong>Elisa Stenberg</strong></h4>
