--- a/articles.html
+++ b/articles.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+  <link rel="stylesheet preload" href="https://www.w3schools.com/w3css/4/w3.css" media="all" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet preload" href="css/style.css" media="all" />
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
   <meta name="author" content="Elisa Stenberg" />
   <meta name="description" property="og:description" content="Täältä voit lukea kirjoitukseni" />
