--- a/articles.html
+++ b/articles.html
@@ -64,7 +64,7 @@
     </div>
   </footer>
   <script async defer src="https://static.addtoany.com/menu/page.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"></script>
   <script src="assets/articles.js"></script>
   <script src="main.js"></script>
 </body>
