--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
   <link rel="stylesheet preload" href="https://www.w3schools.com/w3css/4/w3.css" media="all" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet prefetch" />
   <link rel="stylesheet preload" href="css/style.css" media="all" />
   
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
@@ -144,7 +144,7 @@
     </div>
   </footer>
   <script async defer src="https://static.addtoany.com/menu/page.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"></script>
   <script src="main.js" defer></script>
   <script src="assets/articles.js"></script>
 </body>
