--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
 <html lang="fi">
-
 <head>
   <title>Elisan blogi</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
- 
-  <link rel="stylesheet preload" href="https://www.w3schools.com/w3css/4/w3.css" media="all" />
+
+  <link rel="preload" as="style" href="https://www.w3schools.com/w3css/4/w3.css" media="all"
+    onload="this.rel='stylesheet'" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet prefetch" />
-  <link rel="stylesheet preload" href="css/style.css" media="all" />
-  
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap"
+    rel="stylesheet prefetch" />
+  <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'" />
+
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
   <meta name="description" property="og:description" content="Täältä voit lukea Elisan kirjoituksia" />
   <meta name="keywords" content="Elisa Stenberg, kirjoituksia, blogi" />
   <meta name="author" content="Elisa Stenberg" />
   <meta name="image" property="og:image" content="assets/background/annie.webp" />
   <meta name="google-site-verification" content="wyhBlr3ay1NftvwDC1SFGTjWaY8NoGQ1UieA6m1yL-0" />
-  </head>
+  <style>
+    body {
+      font-family: "Montserrat", sans-serif;
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-color: black;
+    }
 
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+      font-family: "Raleway", sans-serif;
+    }
+  </style>
+
+</head>
 <body class="w3-content">
   <header class="w3-container w3-center w3-padding-32 w3-text-white">
     <h1><strong>Elisan Antologia</strong></h1>
@@ -37,13 +56,15 @@
                     Viimeisin merkintä
                   </strong>
                 </h2>
-                <img
+                <picture>
+                  <source media="(max-device-width:500px )" srcset="assets/{{mobile}}">
+                  <img
                   src="assets/{{imgSrc}}"
                   alt="Book's cover"
-                  loading="lazy"
-                  width="100%"
-                  height="500px"
-                />
+                  width="300px"
+                  height="500px"/>
+                </picture>
+                
                 <div class="w3-container">
                   <h3>
                     {{title}}
@@ -76,9 +97,8 @@
     <section class="w3-col l4">
       <!-- About Card -->
       <div class="w3-card w3-margin w3-margin-top w3-sand">
-        <img class="w3-circle w3-margin" id="profilePhoto"
-          src="./assets/profile.webp"
-          alt="Elisa Stenberg, profile photo" width="100%" height="250px" oncontextmenu="false" loading="lazy" />
+        <img class="w3-circle w3-margin" id="profilePhoto" src="./assets/profileSmaller.webp"
+          alt="Elisa Stenberg, profile photo" width="100px" height="250px" oncontextmenu="false" loading="lazy" />
         <div class="w3-container w3-sand">
           <h4><strong>Elisa Stenberg</strong></h4>
           <p>
@@ -113,11 +133,11 @@
                 <li class="w3-padding-16">
                   <a href="articles.html?id={{@index}}">
                     <img
-                      src="assets/{{imgSrc}}"
+                      src="assets/{{mobile}}"
                       alt="Image"
                       class="w3-left w3-margin-right w3-image"
                       loading="lazy"
-                      width="100%"
+                      width="100px"
                       height="250px"
                     />
                     <h3 class="w3-large">
@@ -134,7 +154,7 @@
     </section>
   </main>
   <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-    <div  class="a2a_kit a2a_kit_size_32 a2a_default_style">
+    <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
       <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
       <a class="a2a_button_facebook"></a>
       <a class="a2a_button_facebook_messenger"></a>
@@ -143,10 +163,10 @@
       <a class="a2a_button_copy_link"></a>
     </div>
   </footer>
-  <script async defer src="https://static.addtoany.com/menu/page.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"></script>
-  <script src="main.js" defer></script>
-  <script src="assets/articles.js"></script>
+  <script async src="https://static.addtoany.com/menu/page.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"></script>
+  <script defer src="assets/articles.js"></script>
+  <script defer src="main.js"></script>
 </body>
 
 </html>
