--- a/articles.html
+++ b/articles.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preload" as="style" href="https://www.w3schools.com/w3css/4/w3.css" media="all"
-    onload="this.rel='stylesheet'" />
+  <link rel=" stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" media="all"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap"
     rel="stylesheet prefetch" />
