--- a/articles.html
+++ b/articles.html
@@ -71,24 +71,17 @@
       <script id="template" type="text/x-handlebars-template">
         <article class="w3-card-4 w3-padding w3-sand">
           <figure class="w3-display-container">
-            <picture>
-              <source
-                media="(max-device-width:500px )"
-                srcset="assets/{{mobile}}"
-              />
-              <img
-                oncontextmenu="false"
+            <img oncontextmenu="false"
                 src="assets/{{imgSrc}}"
                 alt="Book's cover"
                 width="300px"
                 height="500px"
-              />
-            </picture>
+            srcset="assets/{{imgSrc}}, assets/{{imageSmall}} 540w" sizes="100vw"
+          />
             <figcaption class="w3-display-bottomright w3-tag">
               {{imageComment}}
             </figcaption>
           </figure>
-
           <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
             <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
             <a class="a2a_button_facebook"></a>
