settings fro overflow

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <li class="w3-padding-16">
                   <a href="articles.html?id={{@index}}">
                     <img
-                      src="assets/{{mobile}}"
+                      src="assets/{{imageSmall}}"
                       alt="Image"
                       class="w3-left w3-margin-right w3-image"
                       loading="lazy"
