--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!--SEO-->
 <meta name="author" content="Elisa Stenberg">
-<meta name="image" property="og:image" content="/public/assets/annie.webp">
+<meta name="image" property="og:image" content="./assets/annie.webp">
 
 
 <!--Fonts-Stylesheets-Scripts-->
@@ -54,7 +54,7 @@ document.body.style.background = `url( ${photo}) no-repeat center fixed` ;
         </strong>
     </h2>
     <figure class="w3-display-container">
-        <img oncontextmenu="false" src="/public/assets/pond-helsinki-mobile.webp" alt="Book's cover" width="300" height="300" srcset="/public/assets/pond-helsinki-mobile.webp 540w, /public/assets/pond-helsinki.webp 1080w">
+        <img oncontextmenu="false" src="./assets/pond-helsinki-mobile.webp" alt="Book's cover" width="300" height="300" srcset="./assets/pond-helsinki-mobile.webp 540w, ./assets/pond-helsinki.webp 1080w">
         <figcaption class="w3-display-bottomright w3-tag">
         Helsinki, 09/2019
         </figcaption>
@@ -83,7 +83,7 @@ document.body.style.background = `url( ${photo}) no-repeat center fixed` ;
         </strong>
     </h2>
     <figure class="w3-display-container">
-        <img oncontextmenu="false" src="/public/assets/leaf-mobile.webp" alt="Book's cover" width="300" height="300" srcset="/public/assets/leaf-mobile.webp 540w, /public/assets/leaf.webp 1080w">
+        <img oncontextmenu="false" src="./assets/leaf-mobile.webp" alt="Book's cover" width="300" height="300" srcset="./assets/leaf-mobile.webp 540w, ./assets/leaf.webp 1080w">
         <figcaption class="w3-display-bottomright w3-tag">
         Turku, 09/2019
         </figcaption>
@@ -112,7 +112,7 @@ document.body.style.background = `url( ${photo}) no-repeat center fixed` ;
         </strong>
     </h2>
     <figure class="w3-display-container">
-        <img oncontextmenu="false" src="/public/assets/A540px.webp" alt="Book's cover" width="300" height="300" srcset="/public/assets/A540px.webp 540w, /public/assets/A.webp 1080w">
+        <img oncontextmenu="false" src="./assets/A540px.webp" alt="Book's cover" width="300" height="300" srcset="./assets/A540px.webp 540w, ./assets/A.webp 1080w">
         <figcaption class="w3-display-bottomright w3-tag">
         Auringonkukka, Uusikaupunki, 09/2020
         </figcaption>
@@ -140,7 +140,7 @@ document.body.style.background = `url( ${photo}) no-repeat center fixed` ;
  <!-- About Card -->
 <section class="w3-col l4">
 	<div class="w3-card w3-margin w3-margin-top w3-sand">
-		<img class="w3-circle w3-margin" id="profilePhoto" src="/public/assets/profilePhoto.webp" alt="Elisa Stenberg, profile photo" width="100" height="100" oncontextmenu="false" loading="lazy">
+		<img class="w3-circle w3-margin" id="profilePhoto" src="./assets/profilePhoto.webp" alt="Elisa Stenberg, profile photo" width="100" height="100" oncontextmenu="false" loading="lazy">
 
 
 		<div class="w3-container w3-sand">
