--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 <!--Fonts-Stylesheets-Scripts-->
-<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel=" stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 
@@ -66,7 +66,7 @@ document.body.style.background = `url( ${photo}) no-repeat center fixed` ;
         </a>
         <div class="w3-row">
         <div class="w3-col m8 s12">
-            <a href="/blog/Larin_Paraskelle" class="w3-button w3-margin-bottom w3-padding-large w3-white w3-border">
+            <a href="/blog/Larin_Paraskelle/index.html" class="w3-button w3-margin-bottom w3-padding-large w3-white w3-border">
             <strong>
                 Lue lisää...
             </strong>
@@ -95,7 +95,7 @@ document.body.style.background = `url( ${photo}) no-repeat center fixed` ;
         </a>
         <div class="w3-row">
         <div class="w3-col m8 s12">
-            <a href="/blog/Vanhan_naisen_mutokuva" class="w3-button w3-margin-bottom w3-padding-large w3-white w3-border">
+            <a href="/blog/Vanhan_naisen_mutokuva/index.html" class="w3-button w3-margin-bottom w3-padding-large w3-white w3-border">
             <strong>
                 Lue lisää...
             </strong>
@@ -124,7 +124,7 @@ document.body.style.background = `url( ${photo}) no-repeat center fixed` ;
         </a>
         <div class="w3-row">
         <div class="w3-col m8 s12">
-            <a href="/blog/A" class="w3-button w3-margin-bottom w3-padding-large w3-white w3-border">
+            <a href="/blog/A/index.html" class="w3-button w3-margin-bottom w3-padding-large w3-white w3-border">
             <strong>
                 Lue lisää...
             </strong>
