--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <!--Fonts-Stylesheets-Scripts-->
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel=" stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel=" stylesheet" href="/assets/style.9ec4fb96.css">
 
 
 <script defer="">
