--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ document.body.style.background = `url( ${photo}) no-repeat center fixed` ;
         </a>
         <div class="w3-row">
         <div class="w3-col m8 s12">
-            <a href=./blog/Larin_Paraskelle/index.html" class="w3-button w3-margin-bottom w3-padding-large w3-white w3-border">
+            <a href="./blog/Larin_Paraskelle/index.html" class="w3-button w3-margin-bottom w3-padding-large w3-white w3-border">
             <strong>
                 Lue lisää...
             </strong>
